# powerlaw

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  benchmarks.txt
.github/workflows/: publish.yml
benches/: benchmarks.rs  lognormal_bench.rs
src/: fitted_results.rs  lib.rs  main.rs  stats.rs  util.rs
tests/: correctness.rs  dist_test.rs  tail_consistency_test.rs  tailsize_test.rs  util_test.rs
