[package]
name = "powerlaw"
version = "0.0.9"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Adam Ulichny <aulichny@protonmail.com>"]
description = "A Rust library and command-line tool for analyzing power-law distributions in empirical data."
categories = ["mathematics", "finance", "science"]
repository = "https://github.com/aulichny3/powerlaw.git"

[lib]
name = "powerlaw"
path = "src/lib.rs"

[[bin]]
name = "powerlaw"
path = "src/main.rs"

[dependencies]
rand = "0.9.2"
csv = "1.3.1"
rayon = "1.11.0"
clap = { version = "4.5.51", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
